syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 605
// EnetChannelId: 0
// EnetIsReliable: true
message SetEquipLockStateRsp {
	int32 retcode = 7;
	uint64 target_equip_guid = 13;
	bool is_locked = 5;
}
