syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ItemParam.proto";

// CmdId: 686
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message WeaponUpgradeReq {
	uint64 target_weapon_guid = 3;
	repeated uint64 food_weapon_guid_list = 8;
	repeated ItemParam item_param_list = 14;
}
