syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message ItemParam {
	uint32 item_id = 1;
	uint32 count = 2;
}
