syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message MaterialInfo {
	uint64 guid = 1;
	uint32 count = 2;
}
